# Past-Projects

./: README.md  Vehicle Price Prediction using ML
2D-Sensor-Fusion-main/: CMakeLists.txt  CMakeSettings.json  README.md
2D-Sensor-Fusion-main/dat/new_dat/: timestamps.txt  timestamps_end.txt  timestamps_start.txt
2D-Sensor-Fusion-main/images/new_images/image_00/: timestamps.txt
2D-Sensor-Fusion-main/images/new_images/image_01/: timestamps.txt
2D-Sensor-Fusion-main/images/new_images/image_02/: timestamps.txt
2D-Sensor-Fusion-main/images/new_images/image_03/: timestamps.txt
2D-Sensor-Fusion-main/src/: project_lidar_to_camera.cu
2D-Sensor-Fusion-main_old/: CMakeLists.txt  README.md
2D-Sensor-Fusion-main_old/src/: filter_lidar_points.cpp  project_lidar_to_camera.cpp  show_lidar_top_view.cpp  structIO.cpp
8x8_Router/: GATE_synthesis.txt  Gate_results.txt  RTL_results.txt  fifo (1).v  gate.v  portin.v  portout.v  readme.txt  router.v  switch_fabric.v  testbench.sv
CUDA Sensor Fusion/: readme.txt
ELEN-509-Final-Project/Core/Inc/: stm32g0xx_it.h
ELEN-509-Final-Project/Core/Modules/Conversions/: ASCII_numbers.c  ASCII_numbers.h
ELEN-509-Final-Project/Core/Modules/GPS/: gps.c  gps.h  gps_circular_buffer.c  gps_circular_buffer.h
ELEN-509-Final-Project/Core/Modules/Serial_Mult/: Serial.c  Serial.h  serial_user.c  serial_user.h
ELEN-509-Final-Project/Core/Src/: main.c  stm32g0xx_hal_msp.c  stm32g0xx_it.c
ELEN-509-Final-Project/G070/: readme.txt
ELEN-509-Final-Project/G070/Core/Inc/: Scheduler.h  main.h  stm32g0xx_hal_conf.h
ELEN-509-Final-Project/G070/Core/Src/: main.c  stm32g0xx_it.c
ELEN-509-Final-Project/L432/: readme.txt
M23A640 SRAM/: M23A640 (1).v  SPI_Interface (1).v  SPI_Interface_p2.v  SPI_Interface_p2_tb.v  SRAM (1).v  SRAM_p1.v  SRAM_p1_tb.v  readme.txt  results_&_explanation.txt  tbserial (1).v
Price-Prediction-using-ML/: Used_Vehicle_Price_Prediction.ipynb  readme.txt
STM32 Color Organ/: FG_N_Scope.ioc  FG_N_Scope.yat  readme.txt
STM32 Grill Thermometer/: IES_070_Bd_Test.ioc  readme.txt
Tomasulo with ROB/: readme.txt  results.txt
Tomasulo with ROB/tomasulo/: Makefile  arch.c  arch.h  inst.c  inst.h  tomasulo  tomasulo.c
(+27 files in other folders)
